<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.nonameyet.RegisterActivity">

    <TextView android:id="@+id/reg_static_lbl_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_register"
        android:textSize="25sp"
        android:paddingBottom="75sp"
        android:layout_gravity="center_horizontal"/>

    <EditText android:id="@+id/reg_edt_name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_name_hint"
        android:inputType="textCapWords"/>

    <Spinner android:id="@+id/reg_sed_gender"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_hint"
        android:entries="@array/Genders" />

    <EditText android:id="@+id/reg_edt_uname"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_uname_hint"
        android:inputType="textCapWords"/>

    <EditText android:id="@+id/reg_edt_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_password_hint"
        android:inputType="textPassword"/>

    <EditText android:id="@+id/reg_edt_repassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_repassword_hint"
        android:inputType="textPassword"
        android:paddingTop="10sp"/>

    <Button android:id="@+id/reg_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn_register_hint"
        android:layout_gravity="center_horizontal"
        android:onClick="doRegister" />
</LinearLayout>