<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nonameyet.LoginActivity">

    <TextView android:id="@+id/log_static_lbl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:textSize="25sp"
        android:paddingBottom="20sp"
        android:layout_gravity="center_horizontal"/>

    <EditText android:id="@+id/log_edt_uname"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_uname_hint"
        android:inputType="textCapWords"/>

    <EditText android:id="@+id/log_edt_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edt_password_hint"
        android:inputType="textPassword"/>

    <Button android:id="@+id/log_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn_login_hint"
        android:layout_gravity="center_horizontal"/>

    <CheckBox android:id="@+id/log_chkbx_autologin"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/chkbx_autologin"
        android:layout_gravity="center_horizontal"
        android:onClick="doLogin"/>
</LinearLayout>